tests/ui/privacy/legacy-ctor-visibility.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `S`
  --> $DIR/legacy-ctor-visibility.rs:9:13
   |
LL |             S(10);
   |             ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
